sg.tf
resource "aws_security_group" "allow_http_ssh_pub" {
  name        = "allow_http_and_ssh_pub"
  description = "Allow http and ssh  pub inbound traffic"
  vpc_id = aws_vpc.ab_diplom_vpc.id
  ingress {
    description = "port_for_Apache_Superset"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

   tags = {
    Name = "allow_http_ssh"
  }
}

resource "aws_security_group" "allow_http_ssh_priv" {
  name        = "allow_http_and_ssh_priv"
  description = "Allow http and ssh priv inbound traffic"
  vpc_id = aws_vpc.ab_diplom_vpc.id
  ingress {
    description = "http"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

   tags = {
    Name = "allow_http_ssh"
  }
}


resource "aws_security_group" "postgres_db_sg" {
  name        = "postgres-security-group"
  description = "Security group for Postgres database"
  vpc_id = aws_vpc.ab_diplom_vpc.id
   ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
